...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/smushitalic_qqav"
        android:text="Word Wiz"
        android:textSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/ImagePageOpenBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ImagePageOpenBtn"
...
